time overflow issue fixed on homepage

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -147,7 +147,7 @@ body {
 
 .single-friend .message-text {
     margin: 0px 15px;
-    width: 80%;
+    width: 60%;
 }
 
 .single-friend .message-text h6 {
@@ -157,10 +157,16 @@ body {
     font-size: 17px;
 }
 
+.single-friend .time {
+    margin-left: auto;
+}
+
 .time,
 .chat-status {
     color: grey;
-    font-size: 15px;
+    font-size: 13px;
+    white-space: nowrap;
+    text-transform: lowercase;
 }
 
 .stories {
